compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__consts__imported_aliased_ok.snap
---
source: compiler-core/src/javascript/tests/consts.rs
expression: "import rakun.{Ok as Y}\n\npub record X {\n  Ok\n}\n\npub const y = Y\n"
---
import * as $rakun from "../rakun.mjs";
import { Ok as Y, CustomType as $CustomType } from "../rakun.mjs";

export class Ok extends $CustomType {}

export const y = (var0) => { return new Y(var0); };
