compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__consts__imported_ok.snap
---
source: compiler-core/src/javascript/tests/consts.rs
assertion_line: 30
expression: "import rakun\n\npub record X {\n  Ok\n}\n\npub const y = rakun.Ok\n"
---
import * as $rakun from "../rakun.mjs";
import { Ok, CustomType as $CustomType } from "../rakun.mjs";

export class Ok extends $CustomType {}

export const y = (var0) => { return new Ok(var0); };
